area-rit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lame-fair-app
  namespace: lame-fair
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lame-fair-app
  template:
    metadata:
      labels:
        app: lame-fair-app
    spec:
      imagePullSecrets:
        - name: gitlab-regcred
      volumes:
        - name: staticfiles
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: django
          image: registry.gitlab.com/area7/nffa-di/lame_fair_by_design:test
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: staticfiles
              mountPath: /app/staticfiles
        - name: nginx
          image: nginx:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: staticfiles
              mountPath: /app/staticfiles
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
